@@ -1,2 +1,6 @@
 # ESOF_4250_Security_Application
 Authentication application to prevent over-the-shoulder surfing
+
+`--module-path "\path\to\javafx-sdk-12.0.1\lib" --add-modules javafx.controls,javafx.fxml`
+
+Download jar 9.x.x from https://github.com/sshahine/JFoenix
